--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -216,6 +216,12 @@
     <Compile Include="GUI\Signals\ExternalSignalCategoryList.Designer.cs">
       <DependentUpon>ExternalSignalCategoryList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Signals\SignalList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Signals\SignalList.Designer.cs">
+      <DependentUpon>SignalList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Signals\ExternalSignalList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -434,6 +440,7 @@
     <Compile Include="Model\Signals\ExternalSignalCategory.cs" />
     <Compile Include="Model\Signals\ExternalSignal.cs" />
     <Compile Include="Model\Signals\ExternalSignalDatabases.cs" />
+    <Compile Include="Model\Signals\SignalRegister.cs" />
     <Compile Include="Model\Signals\SignalsManager.cs" />
     <Compile Include="Model\Signals\SignalTallyType.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamViewerCount.cs" />
@@ -565,6 +572,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Signals\ExternalSignalCategoryList.resx">
       <DependentUpon>ExternalSignalCategoryList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Signals\SignalList.resx">
+      <DependentUpon>SignalList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Signals\ExternalSignalList.resx">
       <DependentUpon>ExternalSignalList.cs</DependentUpon>
