--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -413,6 +413,10 @@
     <Compile Include="Model\Routers\BlackMagicDesign\BmdVideohub.cs" />
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputInputName.cs" />
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputSource.cs" />
+    <Compile Include="Model\Routers\Label.cs" />
+    <Compile Include="Model\Routers\Labelset.cs" />
+    <Compile Include="Model\Routers\LabelsetDatabase.cs" />
+    <Compile Include="Model\Routers\LabelXmlSerializer.cs" />
     <Compile Include="Model\Routers\Leitch\LeitchRouter.cs" />
     <Compile Include="Model\Routers\Router.cs" />
     <Compile Include="Model\Routers\RouterDatabase.cs" />
