--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -146,6 +146,18 @@
     <Compile Include="GUI\Routers\RouterControlForm.Designer.cs">
       <DependentUpon>RouterControlForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Routers\LabelsetList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Routers\LabelsetList.Designer.cs">
+      <DependentUpon>LabelsetList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Routers\LabelsetEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Routers\LabelsetEditorForm.Designer.cs">
+      <DependentUpon>LabelsetEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Routers\RouterOutputControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -541,6 +553,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Routers\RouterControlForm.resx">
       <DependentUpon>RouterControlForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Routers\LabelsetList.resx">
+      <DependentUpon>LabelsetList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Routers\LabelsetEditorForm.resx">
+      <DependentUpon>LabelsetEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Routers\RouterOutputControl.resx">
       <DependentUpon>RouterOutputControl.cs</DependentUpon>
