--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -420,6 +420,7 @@
     <Compile Include="Model\General\ObservableList.cs" />
     <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
+    <Compile Include="Model\Macros\MacroCommandRegister.cs" />
     <Compile Include="Model\Macros\MacroCommandWithArguments.cs" />
     <Compile Include="Model\Macros\IMacroCommandArgument.cs" />
     <Compile Include="Model\Macros\IMacroCommandArgumentT.cs" />
