Implement serialization of macros

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -420,6 +420,7 @@
     <Compile Include="Model\General\ObservableList.cs" />
     <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
+    <Compile Include="Model\Macros\MacroCommandBase.cs" />
     <Compile Include="Model\Macros\MacroCommandRegister.cs" />
     <Compile Include="Model\Macros\MacroCommandWithArguments.cs" />
     <Compile Include="Model\Macros\IMacroCommandArgument.cs" />
@@ -428,6 +429,7 @@
     <Compile Include="Model\Macros\IMacroCommand.cs" />
     <Compile Include="Model\Macros\Macro.cs" />
     <Compile Include="Model\Macros\MacrosManager.cs" />
+    <Compile Include="Model\Macros\MacroCommandWithArgumentsXmlSerializer.cs" />
     <Compile Include="Model\MasterDatabase.cs" />
     <Compile Include="Model\Mixers\BlackMagicDesign\BmdMixer.cs" />
     <Compile Include="Model\Mixers\DynamicTextFunctions\MixerPreviewInputName.cs" />
