--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -83,11 +83,11 @@
     <Compile Include="GUI\GeneralComponents\Tables\DataGridViewSmallIconCell.cs" />
     <Compile Include="GUI\Helpers\ResizableControls.cs" />
     <Compile Include="GUI\Helpers\DraggableControls.cs" />
-    <Compile Include="GUI\Macros\MacroPanelForm.cs">
+    <Compile Include="GUI\Macros\MacroPanelEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Macros\MacroPanelForm.Designer.cs">
-      <DependentUpon>MacroPanelForm.cs</DependentUpon>
+    <Compile Include="GUI\Macros\MacroPanelEditorForm.Designer.cs">
+      <DependentUpon>MacroPanelEditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Macros\MacroPanelList.cs">
       <SubType>Form</SubType>
@@ -591,8 +591,8 @@
     <EmbeddedResource Include="GUI\ChildWindowWithTitleTwoParts.resx">
       <DependentUpon>ChildWindowWithTitleTwoParts.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Macros\MacroPanelForm.resx">
-      <DependentUpon>MacroPanelForm.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\Macros\MacroPanelEditorForm.resx">
+      <DependentUpon>MacroPanelEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Macros\MacroPanelList.resx">
       <DependentUpon>MacroPanelList.cs</DependentUpon>
