--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -458,9 +458,16 @@
     <Compile Include="Model\General\ObservableList.cs" />
     <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
+    <Compile Include="Model\Macros\IMacroTriggerArgument.cs" />
+    <Compile Include="Model\Macros\IMacroTrigger.cs" />
     <Compile Include="Model\Macros\MacroArgumentKeyType.cs" />
     <Compile Include="Model\Macros\MacroCodeInterpreter.cs" />
     <Compile Include="Model\Macros\MacroCodeTokenizer.cs" />
+    <Compile Include="Model\Macros\MacroTriggerBase.cs" />
+    <Compile Include="Model\Macros\MacroTriggerDefaultCallImplementations.cs" />
+    <Compile Include="Model\Macros\MacroTriggerWithArgumentsXmlSerializer.cs" />
+    <Compile Include="Model\Macros\MacroTriggerRegister.cs" />
+    <Compile Include="Model\Macros\MacroTriggerWithArguments.cs" />
     <Compile Include="Model\Macros\MacroCommandWithArgumentsToCodeSerializer.cs" />
     <Compile Include="Model\Macros\MacroPanelElementXmlSerializer.cs" />
     <Compile Include="Model\Macros\MacroPanelDatabase.cs" />
