--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -529,6 +529,7 @@
     <Compile Include="Model\Routers\RouterOutputXmlSerializer.cs" />
     <Compile Include="Model\Routers\RouterState.cs" />
     <Compile Include="Model\Routers\RouterTypeNameConverter.cs" />
+    <Compile Include="Model\Routers\Triggers\RouterCrosspointChangedMacroTrigger.cs" />
     <Compile Include="Model\Routers\Triggers\RouterOutputSourceChangedMacroTrigger.cs" />
     <Compile Include="Model\Routers\Triggers\RouterMacroTriggers.cs" />
     <Compile Include="Model\Routers\Virtual\VirtualRouter.cs" />
