Implement some macro commands in UMDs module

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -559,6 +559,9 @@
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerTotalSeconds.cs" />
     <Compile Include="Model\TypeCodeAttribute.cs" />
     <Compile Include="Model\TypeLabelAttribute.cs" />
+    <Compile Include="Model\UMDs\Macros\UmdMacroCommands.cs" />
+    <Compile Include="Model\UMDs\Macros\UmdDynamicTextMacroCommand.cs" />
+    <Compile Include="Model\UMDs\Macros\UmdStaticTextMacroCommand.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1T.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1TType.cs" />
     <Compile Include="Model\Variables\BooleanBase.cs" />
