Add numeric setting value converters

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -285,6 +285,12 @@
     <Compile Include="GUI\Settings\SettingsWindow.Designer.cs">
       <DependentUpon>SettingsWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Settings\NumericSettingEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\Settings\NumericSettingEditor.Designer.cs">
+      <DependentUpon>NumericSettingEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Settings\StringSettingEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -521,6 +527,9 @@
     <Compile Include="Model\SerialPorts\SerialPortDatabase.cs" />
     <Compile Include="Model\Settings\Converters\BoolConverter.cs" />
     <Compile Include="Model\Settings\Converters\ColorConverter.cs" />
+    <Compile Include="Model\Settings\Converters\DoubleConverter.cs" />
+    <Compile Include="Model\Settings\Converters\DecimalConverter.cs" />
+    <Compile Include="Model\Settings\Converters\FloatConverter.cs" />
     <Compile Include="Model\Settings\Converters\IntConverter.cs" />
     <Compile Include="Model\Settings\Converters\ISettingValueConverter.cs" />
     <Compile Include="Model\Settings\ISetting.cs" />
@@ -696,6 +705,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Settings\SettingsWindow.resx">
       <DependentUpon>SettingsWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Settings\NumericSettingEditor.resx">
+      <DependentUpon>NumericSettingEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Settings\StringSettingEditor.resx">
       <DependentUpon>StringSettingEditor.cs</DependentUpon>
