Add cut and auto transitions as macro commands for BMD mixers

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -497,6 +497,10 @@
     <Compile Include="Model\Macros\RunMacroMacroCommand.cs" />
     <Compile Include="Model\MasterDatabase.cs" />
     <Compile Include="Model\Mixers\BlackMagicDesign\BmdMixer.cs" />
+    <Compile Include="Model\Mixers\BlackMagicDesign\Macros\CutTransitionMacroCommand.cs" />
+    <Compile Include="Model\Mixers\BlackMagicDesign\Macros\AutoTransitionMacroCommand.cs" />
+    <Compile Include="Model\Mixers\BlackMagicDesign\Macros\BmdMixerMacroCommands.cs" />
+    <Compile Include="Model\Mixers\BlackMagicDesign\Macros\TransitionMacroCommandBase.cs" />
     <Compile Include="Model\Mixers\DynamicTextFunctions\MixerPreviewInputName.cs" />
     <Compile Include="Model\Mixers\DynamicTextFunctions\MixerProgramInputName.cs" />
     <Compile Include="Model\Mixers\Mixer.cs" />
